# rustyfx

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  generated_currency.rs
crates/rustyfx/: Cargo.toml
crates/rustyfx-core/: Cargo.toml
crates/rustyfx-core/src/currency/: mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: main.rs
misc/curr_unusable_crates/rustyfx-convert/: Cargo.toml  README.md
misc/curr_unusable_crates/rustyfx-crypto/: Cargo.toml
rustyfx/: Cargo.toml
rustyfx-convert/: Cargo.toml
rustyfx-core/: Cargo.toml  README.md
rustyfx-core/src/currency/: mod.rs
rustyfx-crypto/: Cargo.toml  README.md
rustyfx/src/: lib.rs
