[package]
name = "rustyfx-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sinameru <sinameru@proton.me>"]
description = "Core types and structures for RustyFX financial toolkit."
readme = "README.md"
repository = "https://github.com/sinameru/rustyfx"
keywords = ["finance", "currency", "crypto", "fx"]
categories = ["finance", "data-processing", "cryptography"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
