[package]
name = "rustyfx-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sinameru <sinameru@proton.me>"]
description = "Core types and structures for RustyFX financial toolkit."
readme = "README.md"
repository = "https://github.com/sinameru/rustyfx"
keywords = ["finance", "currency", "crypto", "fx"]
categories = ["finance", "cryptography", "cryptography::cryptocurrencies"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# Used by the update_currency_iso4217
reqwest = { version = "0.12.23", features = ["blocking"] }
quick-xml = "0.38.3"
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"