[package]
name = "rustyfx-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sinameru <sinameru@proton.me>"]
description = "Crypto-specific functions and utilities for RustyFX."
readme = "README.md"
repository = "https://github.com/sinameru/rustyfx"
keywords = ["finance", "currency", "crypto", "fx"]
categories = ["finance", "cryptography", "cryptography::cryptocurrencies"]

[dependencies]
rustyfx-core = "0.1.0"
rustyfx-convert = "0.1.0"
serde = { version = "1.0", features = ["derive"] }